@@ -1,3 +1,6 @@
+11-04-2006 Zac Bowling <zac@zacbowling.com>
+	sample/TestGtkSpell.cs - Cleaned up spacing
+	
 10-04-2006 Zac Bowling <zac@zacbowling.com>
 	gtkspell/Makefile.am - Updated mcs build to prevent warnings
 
